--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "npm-run-all": "^4.1.5",
     "parcel": "latest",
     "rimraf": "^4.4.0"
+  },
+  "dependencies": {
+    "sharp": "^0.31.1"
   }
 }
