--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "chart.js": "^4.2.1",
     "npm-run-all": "^4.1.5",
     "parcel": "latest",
-    "rimraf": "^4.4.0"
-  },
-  "dependencies": {
+    "rimraf": "^4.4.0",
     "sharp": "^0.31.1"
   }
 }
